hphp/hack/test/typecheck/constraints/generic_function_constraint_lambda.php.like_types.exp
File "generic_function_constraint_lambda.php", line 9, characters 9-9:
Invalid argument (Typing[4110])
File "generic_function_constraint_lambda.php", line 9, characters 9-9:
Expected T
File "generic_function_constraint_lambda.php", line 9, characters 9-9:
But got dynamic because it is an unenforceable type
